Name:                crypt
Version:             0.1
Synopsis:            Crypt Tests
License:             BSD3
License-file:        LICENSE
Author:              Marko Bencun
Maintainer:          mbencun@gmail.com
Category:            Application
Build-type:          Simple
Cabal-version:       >=1.2


Executable Crypt
  Main-is:             Crypt.hs
  Build-depends:       base >= 4.5.1.0,
                       bytestring >= 0.10.2.0,
                       binary >= 0.7.1.0,
                       Crypto >= 4.2.5.1,
                       PBKDF2 >= 0.3.1.3,
                       cipher-aes >= 0.1.8,
                       mwc-random >= 0.12.0.1
  Ghc-options:         -O2 -Wall
