Name:                crypt
Version:             0.1
Synopsis:            Crypt Tests
License:             BSD3
License-file:        LICENSE
Author:              Marko Bencun
Maintainer:          mbencun@gmail.com
Category:            Application
Build-type:          Simple
Cabal-version:       >=1.2


Executable Crypt
  Main-is:             Crypt.hs
  Build-depends:       base,
                       bytestring,
                       binary,
                       Crypto,
                       PBKDF2,
                       cipher-aes,
                       mwc-random
  Ghc-options:         -O2 -Wall
